--- a/style.css
+++ b/style.css
@@ -8,13 +8,13 @@
     background-repeat: no-repeat;
     height: 100vh;
     width: 100vw;
-    display:flex;
+    display: flex;
     align-items: center;
     justify-content: center;
  }
  .container {
     width: 80vw;
-    max-width: 50%;
+    max-width: 100%;
     background-color: beige;
     height: 70vh;
     box-shadow: 0 0 45px 15px #23f323;
@@ -28,6 +28,7 @@
  .score {
     font-size: large;
     font-weight: bold;
+    background-color: aqua;
  }
   
  #user-score {
@@ -90,8 +91,4 @@
 
  }
 
- #score{
-    font-size: x-large;
-    text-shadow: #EF9614;
-    color: rgb(58, 19, 231);
- }
+ 
